# golang-docker-bazel-devcontainer

./: BUILD  README.md  WORKSPACE  go.mod  go.sum
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
bazel/go/: deps.bzl
bazel/rules/: deps.bzl
cmd/echoer/: BUILD.bazel  main.go
cmd/server/: BUILD.bazel  main.go  server.http
pkg/app/: BUILD.bazel  service.go
pkg/echoer/: BUILD.bazel  service.go
