load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "echoer",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/thewhitakers/echoer/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/echoer",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
