load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/thewhitakers/echoer/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/echoer",
        "@com_github_labstack_echo_v4//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
