load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/thewhitakers/echoer/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/echoer",
        "@com_github_labstack_echo_v4//:go_default_library",
    ],
)

go_binary(
    name = "apis",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name="docker",
    base = "@ubuntu_jammy_amd64//image",
    cmd = "/apis",
    files = [":apis"],
    ports = ["3000"],
    repository = "golang-docker-bazel-devcontainer"
)

